vault/instance/base/vault-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-ingress
spec:
  ports:
  - name: api-port
    port: 8300
  selector:
    app.kubernetes.io/name: vault
    vault-active: "true"
    vault_cr: vault
