vault/instance/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
spec:
  port:
    targetPort: api-port
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: vault-ingress
